// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_FAILURE",
}
`;

exports[`creates a FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
}
`;

exports[`creates a FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
}
`;

exports[`handles FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;

exports[`handles FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": true,
}
`;

exports[`handles FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "isFetching": false,
}
`;

exports[`handles fetchConsecutiveData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "386",
          "318",
          "371",
          "905",
        ],
        "serial": Array [
          "602",
          "603",
          "604",
          "605",
          "606",
        ],
      },
      Object {
        "others": Array [
          "933",
          "135",
          "707",
          "574",
        ],
        "serial": Array [
          "671",
          "672",
          "673",
          "674",
          "675",
        ],
      },
      Object {
        "others": Array [
          "101",
          "537",
          "398",
          "472",
        ],
        "serial": Array [
          "142",
          "143",
          "144",
          "145",
          "146",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMatchData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Array [
        Array [
          "c",
          "c",
        ],
        Array [
          "N",
          "N",
        ],
        Array [
          "K",
          "K",
        ],
        Array [
          "B",
          "B",
        ],
      ],
      Array [
        Array [
          "L",
          "L",
        ],
        Array [
          "B",
          "B",
        ],
        Array [
          "c",
          "c",
        ],
        Array [
          "N",
          "N",
        ],
      ],
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMultipleChoiceData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answerIndex": 3,
        "choices": Array [
          "L",
          "J",
          "V",
          "I",
        ],
        "question": "I",
      },
      Object {
        "answerIndex": 2,
        "choices": Array [
          "G",
          "U",
          "D",
          "Y",
        ],
        "question": "D",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchSerialData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 670,
        "serial": Array [
          "665",
          "666",
          "667",
          "668",
          "669",
          "670",
          "671",
          "672",
          "673",
          "674",
          "675",
        ],
      },
      Object {
        "answer": 924,
        "serial": Array [
          "922",
          "923",
          "924",
          "925",
          "926",
          "927",
          "928",
          "929",
        ],
      },
      Object {
        "answer": 95,
        "serial": Array [
          "93",
          "94",
          "95",
          "96",
          "97",
          "98",
        ],
      },
      Object {
        "answer": 541,
        "serial": Array [
          "536",
          "537",
          "538",
          "539",
          "540",
          "541",
          "542",
          "543",
          "544",
          "545",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchWordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "Z",
          "B",
          "D",
          "O",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "N",
          "V",
          "R",
          "I",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "G",
          "Z",
          "O",
          "G",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;
